--- a/package.json
+++ b/package.json
@@ -1,27 +1,33 @@
 {
-  "name": "diary",
-  "version": "0.0.1",
-  "description": "personal diary with map",
+  "name": "notemap",
+  "version": "0.1.2",
+  "description": "personal note with map",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon app"
+    "start": "cross-env NODE_ENV=production PORT=80 pm2 start app.js -i 0",
+    "dev": "nodemon app"
   },
   "author": "ISKang",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.18.0",
     "connect-flash": "^0.1.1",
+    "connect-redis": "^4.0.3",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^5.0.1",
     "express": "~4.16.1",
     "express-session": "^1.15.6",
+    "helmet": "^3.21.2",
+    "hpp": "^0.2.2",
     "http-errors": "~1.6.3",
     "jquery": "^3.4.1",
     "jquery-ui-dist": "^1.12.1",
     "mongoose": "^5.0.11",
     "morgan": "~1.9.1",
-    "pug": "^2.0.4"
+    "pm2": "^4.2.1",
+    "pug": "^2.0.4",
+    "winston": "^3.2.1"
   },
   "devDependencies": {
     "nodemon": "2.0.1"
